# ChangeLog for app-backup/burp
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  03 Aug 2014; Amadeusz Żołnowski <aidecoe@gentoo.org> burp-1.4.20.ebuild:
  Specified correct sbin and sysconf directories, because files used to be
  installed into /usr/usr/sbin and /etc instead of /usr/sbin and /etc/burp.

  03 Aug 2014; Amadeusz Żołnowski <aidecoe@gentoo.org> burp-1.4.20.ebuild:
  Fixed handling tcpd USE flag.

*burp-1.4.20 (03 Aug 2014)

  03 Aug 2014; Amadeusz Żołnowski <aidecoe@gentoo.org> +burp-1.4.20.ebuild,
  +metadata.xml:
  Initial ebuild of latest stable candidate version.
