@@ -1,18 +1,19 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
+AUX burp.initd 874 SHA256 f4f8a1ccf6a63879e185ade40ddec2529b4f2c88a4140fd8bf92f537d70b9b11 SHA512 73badc21f83da43515ed774ea34405e010ac96ab5dff0d1eb16f7f911b5940955af60eb64e370a50fa33bfc9c273966a0cc3506e53738cf7e5a7e23618444637 WHIRLPOOL 466432a75542ac1cb1ac095aedc6657733e01fec42bca558e3555a67a59ba2b8214b99bf4dfdc29dfbffe3df30b498936ae7db3c36af576d2e7ca4a83a02c161
 DIST burp-1.4.20.tar.bz2 727309 SHA256 36f957d2811b3ccc550376629802812b01d92e1e7da29cf1aa4561266fcd08d8 SHA512 03d2ca815f73cf4e7f104b273476d6af65393e7cb49adf75ec719910fca63ad15f07feb465e321809f3f7f207d85a5252a5de2f49e44d2ed8f47e192f39cfa7e WHIRLPOOL 3fc89b0d54a5546d6542ff9d89fd3dd3b96c1255e466696749d32afa3c062c3c18edd43a44904a0697f13024df789ee9076211d88c8f250e9622273de9e16c47
-EBUILD burp-1.4.20.ebuild 959 SHA256 a6489406b3a0ac6626ea349ec79e5483519eed8ac9da5a57a98ea84f097bc794 SHA512 e3aafb2d82c76d6a90f59a2f85d2cd36ba1deb3f59189b9eb429734d7910161df9884de85ff26097a22990e604d34ad3f0f932c20ad22ebc5b07b4a7ed82825a WHIRLPOOL c24f289c603301f1a08c5a15fa640ccca8cbd5e049331c9a7142a2027140a42ad746f8949aff401911d609d64aee3d3e107790fd47f7127fda8824498d1d180c
-MISC ChangeLog 632 SHA256 3a5c37b1f9d52b240c48c90899a8c370cf7bd2f019c3dfa7e9f2cdacfde2ed35 SHA512 a7f25faaaede275c4ca9db45dd3caa883d12b7695ae8f78748f6b81070e6a5a57450b85121f226b5f5c3993c6730b3bc51b235807ae9b9ba639061bd52da84fb WHIRLPOOL 1bae210958e712ecc3c737dc20b1805e70a93f941a8756b85902c287bc70cbbbe4c6734bb2db084acd02b2e398bf62cc3bfd83f06f6f354ff53e568fb6f45d8b
+EBUILD burp-1.4.20.ebuild 2020 SHA256 101219a1cae03f81725504cf876091ed4cb073915f776a6af8380045d694bae5 SHA512 ea49c7b172dcfd446db306ad31e926a93c725dd799098b97f41b97ab54e9eef4d2d9de6be5ab97f800bc60b3dfc6fd1d0ce883cb209c7018ada9646f1a0ef7d1 WHIRLPOOL 1ad8a752632383c552f2b6a1ade519a45773b4736a65273c5ef74818652e21235012ea32ec2267e4124b532c3ce7ab171d4635012fb5613a6105aa0cf2e972c8
+MISC ChangeLog 843 SHA256 b2a3e3f321750a60869800838610e5b9e17e250a216134817b07ea5bc2caf2c7 SHA512 1cc6d26a883ce8884d1ed09dd212ce1a3dfdd8e5589859209fc20ffdb08b44ed80e74ab2297a91abce319eeb5829756feb92babd2fb66e53b86fb3c146ff9598 WHIRLPOOL 299bb094bdb46149872256d46cb8ff3a7ca1392b424837d1fde62596573f5bbd11bf4aa27979b1ae68a8684dadd9c9cd40e5949bdc66f850f388c8b59b59ef38
 MISC metadata.xml 556 SHA256 9c70bf04bfc1bf607ab5319f644fb52eb4e3aa53fe1cc6d7453a6eae3d8463e6 SHA512 31801c6438c7e6bd44dbd2cd137c509584d91c57837dca6392544bd312a6ff4abb5cbd9b7486983d2146a18f9b22303bfa69a66982cbdecbf8daff78b43cdfae WHIRLPOOL ab1cc652c1a6a78777f09678649faa17dc648139dcc8f9c7045a0c0aaaf18b1178be75f60b89939c9606885dce4b152c95aae061e8bd0ff2b6cf644ec7d4df24
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQEcBAEBCAAGBQJT3jWvAAoJEPATRTHh2/q1YXUH+QFiHkFAzXTFxye1mTBHTIIs
-8KyQALD3RiIgwFa8AB9ZzBWqbu/xSbv2JgsSa7+FX5ctJ58/SWMf/4VfoZmnzg4/
-VEA/6mj/oz27HWK2p1DXSLejcKTS6+Uglx14pQOOpfOzZ9pQ45hbn6BeZ14f8NSP
-wdVERy1vfcuHH8tkLYFSc1ENSQURTqaW1tmQ3Kq1TLIEVabI0ESJjmdWV0OMRvA2
-zVrl9fpZ5gu6Ng/XpG6NP6HqzA1aw+Yv7/wphgYc+AJ7FyyLWUcBND/sMqdf9qtv
-WiXqX+GM/e0Gty5EljCSZiV48RwkmiI3eeOVD2iZqJzRd0AMJ1W5ENamGu/sgWs=
-=5MHU
+iQEcBAEBCAAGBQJT70DqAAoJEPATRTHh2/q1k4wH/3eBBsc4VW+T9zm4GQc3SjfK
+STRwDKQHm6vr3SCTjN9A2OnGDXBGE2gXf/XHnC1N2Mua2mCFVSwOStW51KWT+hgA
+0NKU6T8oHbUM8xS5KL2C1fssJY+WrfK9H7cPnCFiFxaEJcnlN9coYHuVNdaAf/ZF
+LqfXMws2Acf10+IfEwdxxTzlUeGy+VkrlXPISXI+11uJJJd0SCWq9DYxXkHsdZTK
+Y0YG0e9o85Vef9+1rKb1/tT6QTxrBxS5Md0LKO9gNcSxjOKawG+ccT/sQrBZq43v
+S+iTUUsPpuzE1FOGF3nkVNWheMhEh3IFjr5DycIoNfH36rS5hDezva13hk4w7u4=
+=j9+v
 -----END PGP SIGNATURE-----
