@@ -2,6 +2,11 @@
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  16 Aug 2014; Amadeusz Żołnowski <aidecoe@gentoo.org> burp-1.4.20.ebuild,
+  +files/burp.initd:
+  Ebuild improvements taken from Aurelien Reynaud's <aurelien@wattapower.net>
+  ebuild attached to bug #411973.
+
   03 Aug 2014; Amadeusz Żołnowski <aidecoe@gentoo.org> burp-1.4.20.ebuild:
   Specified correct sbin and sysconf directories, because files used to be
   installed into /usr/usr/sbin and /etc instead of /usr/sbin and /etc/burp.
